feat: add rag retrieval tuning and trace